--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@types/node": "^18",
     "nuxt": "^3.4.3",
     "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
